added update.xml added reset and close buttons in options page

--- a/src/options.html
+++ b/src/options.html
@@ -37,7 +37,9 @@
       <input id="resetPollingInterval" type="button" value="RESET" />
     </fieldset>
 
+    <input id="close" type="button" value="CLOSE" />
     <input id="save" type="button" value="SAVE" />
+    <input id="reset" type="button" value="RESET ALL" />
   </div>
 </div>
 
