--- a/src/popup.html
+++ b/src/popup.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="css/popup.css" type="text/css" media="screen" charset="utf-8" />
 
 <div id="container">
-  <div id="loading">loading...</div>
+  <div id="status"></div>
   <ul id="friendsTimeline">
   </ul>
   <textarea id="update"></textarea>
